fixed edge case allowing a user to book overlapping stays when updating booking

--- a/frontend/src/components/UpdateBooking/UpdateBookingPage.css
+++ b/frontend/src/components/UpdateBooking/UpdateBookingPage.css
@@ -1,7 +1,4 @@
 .update-reservation-box {
-  position: absolute;
-  top: 30%;
-  left: 30%;
   width: 40%;
   margin: 0 auto;
   display: flex;
